# mlops

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish-for-testing.yml  docker-publish-release.yml  docker-publish.yml
doc/: Exploring_Data.ipynb  creating-kind_cluster.md  requirements_exploring.txt
docker/: baseimage.Dockerfile
k8s/: README.md  mlservice.yaml  mlservice_svc.yaml
ml_service/: cli.py  generating_model.py  heart_model.py  model_api.py
ml_service/util/: generating_model.py  heart_model.py
scripts/: cli.py  model_api.py
tests/: test_generating_model.py  test_heart_mode.py  test_model_api.py  test_scripts_cli.py  test_scripts_model_api.py
