[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = ""
authors = ["fcojperez <fcojperez@gmail.com>"]
license = "MIT"

packages      = [
    { include = "ml_service" }
]

include       = [
    "CHANGELOG.md",
    "README.md"
]


[tool.poetry.dependencies]
python = "^3.10"
blinker = "1.8.1"
click = "8.1.7"
exceptiongroup = "1.2.1"
flask = "3.0.3"
iniconfig = "2.0.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.3"
joblib = "1.4.0"
markupsafe = "2.1.5"
numpy = "1.26.4"
packaging = "24.0"
pandas = "2.2.2"
pluggy = "1.5.0"
pytest = "8.2.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
scikit-learn = "1.4.2"
scipy = "1.13.0"
six = "1.16.0"
threadpoolctl = "3.5.0"
tomli = "2.0.1"
tzdata = "2024.1"
werkzeug = "3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
